added stylesheet main.css, added stylesheet references to all the html templates, added indentation and head/body for better readability

--- a/templates/failed.html
+++ b/templates/failed.html
@@ -1,2 +1,7 @@
-<p>Kirjautuminen epäonnistui.<br> 
-<a href="/">Luo käyttäjä tai yritä uudestaan</a><br>
+<head>
+    <link rel="stylesheet" href="static/main.css">
+</head>
+<body>
+    <p>Kirjautuminen epäonnistui.<br> 
+    <a href="/">Luo käyttäjä tai yritä uudestaan</a><br>
+</body>
