--- a/templates/submit_text.html
+++ b/templates/submit_text.html
@@ -1,4 +1,9 @@
-<form method="post">
-<textarea name="text" required placeholder="Enter your text here"></textarea><br>
-<input type="submit" value="Submit">
-</form>
+<head>
+    <link rel="stylesheet" href="static/main.css">
+</head>
+<body>
+    <form method="post">
+    <textarea name="text" required placeholder="Enter your text here"></textarea><br>
+    <input type="submit" value="Submit">
+    </form>
+</body>
