--- a/templates/userexists.html
+++ b/templates/userexists.html
@@ -1,3 +1,8 @@
-<p>Käyttäjä on jo olemassa.<br> 
-<a href="/">Palaa alkuun ja yritä uudestaan</a><br>
+<head>
+    <link rel="stylesheet" href="static/main.css">
+</head>
+<body>    
+    <p>Käyttäjä on jo olemassa.<br> 
+    <a href="/">Palaa alkuun ja yritä uudestaan</a><br>
+</body>
 
