--- a/templates/usersuccess.html
+++ b/templates/usersuccess.html
@@ -1,4 +1,11 @@
-<p>Käyttäjä luotiin onnistuneesti!<br> 
-<a href="/">Palaa kirjautumaan</a><br>
+<head>
+    <link rel="stylesheet" href="static/main.css">
+</head>
+<body>
+    <p>Käyttäjä luotiin onnistuneesti!<br> 
+    <a href="/">Palaa kirjautumaan</a><br>
+</body>
+
+
     
     
