--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -1,6 +1,11 @@
-<form action="/register" method="post">
-<label for="username">Nimi:</label>
-<input type="text" name="username" id="username" required><br>
-<label for="password">Salasana:</label>
-<input type="password" name="password" id="password" required><br>       
-<input type="submit" value="Register"></form>
+<head>
+    <link rel="stylesheet" href="static/main.css">
+</head>
+<body>
+    <form action="/register" method="post">
+    <label for="username">Nimi:</label>
+    <input type="text" name="username" id="username" required><br>
+    <label for="password">Salasana:</label>
+    <input type="password" name="password" id="password" required><br>       
+    <input type="submit" value="Register"></form>
+</body>
