--- a/static/main.css
+++ b/static/main.css
@@ -2,58 +2,57 @@ body, form, label {
     margin: 0;
     padding: 0;
 }
-  
+
 body {
-    background-color: #F7EABD;
+    background-color: #f2f2f2;
     margin: auto;
     max-width: 45em;
     font-family: 'Helvetica', 'Arial', sans-serif;
     padding: 20px;
     font-size: 18px;
     line-height: 1.6;
-    color: #898D90;
+    color: #333;
 }
-  
+
 p {
     margin-bottom: 20px;
 }
-  
+
 p b {
     font-size: 1.1em;
 }
-  
+
 form {
     margin-top: 20px;
 }
-  
+
 label {
     display: block;
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 10px;
 }
-  
+
 textarea {
     width: 100%;
     min-height: 100px;
     padding: 10px;
     font-size: 1em;
     border-radius: 25px;
-    border: 2px solid #AFACC9;
-    background-color: #D7CADE;
+    border: 2px solid #ccc;
 }
-  
+
 input[type="submit"] {
-    background-color: #DAEDF3;
-    color: #898D90;
-    padding: 15px 30px;
-    font-size: 1.2em;
+    background-color: #993366; /* Magenta shade */
+    color: white;
+    padding: 10px 20px; /* reduced padding */
+    font-size: 1em; /* reduced font size */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     margin-top: 20px;
 }
-  
+
 input[type="submit"]:hover {
-    background-color: #AFACC9;
+    background-color: #cc6699; /* Lighter magenta shade */
 }
