--- a/templates/submit_text.html
+++ b/templates/submit_text.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     <form method="post">
-    <textarea name="text" required placeholder="Enter your text here"></textarea><br>
+    <textarea name="text" required placeholder="Kirjoita arvioitava tekstisi tähän"></textarea><br>
     <input type="submit" value="Submit">
     </form>
 </body>
