fix failed.html error message

--- a/templates/failed.html
+++ b/templates/failed.html
@@ -2,6 +2,6 @@
     <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
-    <p>Kirjautuminen epäonnistui.<br> 
+    <p>Kirjautuminen epäonnistui. Salasana väärin tai käyttäjää ei olemassa.<br> 
     <a href="/">Luo käyttäjä tai yritä uudestaan</a><br>
 </body>
