fixes for cleaner code

--- a/templates/submit_text.html
+++ b/templates/submit_text.html
@@ -4,6 +4,6 @@
 <body>
     <form method="post">
     <textarea name="text" required placeholder="Kirjoita arvioitava tekstisi tähän"></textarea><br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="Lähetä"> <a href="/">Tai palaa takaisin</a>
     </form>
 </body>
