updates to README

--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -7,5 +7,6 @@
     <input type="text" name="username" id="username" required><br>
     <label for="password">Salasana:</label>
     <input type="password" name="password" id="password" required><br>       
-    <input type="submit" value="Register"></form>
+    <input type="submit" value="Rekisteröidy"> <a href="/">Tai palaa takaisin</a>
+    </form> 
 </body>
