--- a/static/main.css
+++ b/static/main.css
@@ -53,6 +53,24 @@ input[type="submit"] {
     margin-top: 20px;
 }
 
+
 input[type="submit"]:hover {
     background-color: #669966; /* changed to light green */
+}
+
+
+a.button {
+    background-color: #336633;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+/* Style the link on hover */
+a.button:hover {
+    background-color: #669966;
 }
