--- a/templates/usersuccess.html
+++ b/templates/usersuccess.html
@@ -2,8 +2,9 @@
     <link rel="stylesheet" href="static/main.css">
 </head>
 <body>
-    <p>Käyttäjä luotiin onnistuneesti!<br> 
-    <a href="/">Palaa kirjautumaan</a><br>
+    <b style='color:336633;'>Käyttäjä luotiin onnistuneesti!</b><br>
+    <br>
+    <a href="/" class="button">Palaa kirjautumaan</a><br>
 </body>
 
 
