change to wording

--- a/templates/readrevs.html
+++ b/templates/readrevs.html
@@ -12,7 +12,7 @@
     {% endfor %}
     </ul>
     {% else %}
-    <p><b><mark>Ei ole yhtään palautetta vielä.</mark></b></p>
+    <p><b><mark>Ei ole vielä yhtään palautetta.</mark></b></p>
     {% endif %}
     <br>
     <a href="/" class="button">Palaa takaisin</a>
